# heliopy

./: .codecov.yml  .coveragerc  .gitattributes  .gitignore  .landscape.yml  .mailmap  .readthedocs.yml  .travis.yml  CHANGELOG.rst  CHANGES.rst  CODE_OF_CONDUCT.rst  MANIFEST.in  README.md  appveyor.yml  azure-pipelines.yml  codecov.yml  doc-requirements.txt  h1y74d346h03m27s21_hdm.1  pyproject.toml  pytest.ini  readthedocs.yml  requirements.txt  setup.cfg  setup.py  test.py
.circleci/: config.yml
.github/workflows/: main.yml  python-docs.yml  python-tests.yml
changelog/: 714.breaking  714.feature  715.feature  719.bugfix.rst  726.bugfix.rst  741.bugfix.rst  747.breaking.rst  749.bugfix.rst  768.bugfix.rst  768.feature.rst  772.feature.rst  776.feature.rst  777.feature.rst  782.bugfix.rst  794.breaking.rst  795.bugfix.rst  800.feature.rst  802.feature.rst  810.bugfix.rst  820.breaking.rst  822.feature.rst  828.feature.rst  831.feature.rst  841.feature.rst  842.feature.rst  846.doc.rst  847.feature.rst  848.feature.rst  856.bugfix.rst  858.bugfix.rst  868.feature.rst  873.feature.rst  876.feature.rst  879.feature.rst  882.feature.rst  894.doc.rst  896.feature.rst  898.bugfix.rst  899.bugfix.rst  932.bugfix.rst  (+5 more)
ci/: azure-steps.yml  install_conda.sh
doc/: Makefile  environment.yml
doc/heliopy_theme/: LICENSE.md  docsidebar.html  footer.html  layout.html  navbar.html  theme.conf
doc/source/: cdflib.rst  conf.py  configuring.rst  coords.rst  development.rst  index.rst  installing.rst  multiindex.rst  pycdf.rst  spice.rst  whatsnew.rst
examples/: data_inventory.py  fast_file_loading.py  multiindex.py  plot_cassini_mission.py  plot_importing_data.py  plot_multi_index.py  plot_omni.py  plot_psp_perihelion_1.py  plot_solo_low_latency_mag.py  plot_solo_mag.py  plot_spice_orbit.py  plot_sunspot.py  plot_timeseries.py  plot_units.py  plot_voyager.py  spice_orbit.py  timeseries.py  timeseries_plotting.py
heliopy/: __init__.py  _version.py  conftest.py  constants.py  fitting.py  heliopyrc  heliopyrc.example  plasma.py  spectra.py  spice.py  stats.py  time.py  timeseries.py
heliopy/bodies/: sun.py
heliopy/coordinates/: __init__.py  frames.py  transformations.py
heliopy/data/: IMP.py  __init__.py  ace.py  artemis.py  cassini.py  cdasrest.py  cluster.py  dscovr.py  earth.py  heliopyrc  helios.py  helper.py  imp.py  messenger.py  mms.py  omni.py  psp.py  solo.py  spice.py  stereo.py  sunspot.py  ulysses.py  util.py  voyager.py  wind.py
heliopy/heliosphere/: __init__.py
heliopy/models/: __init__.py
heliopy/net/: __init__.py  attrs.py
heliopy/plot/: fields.py  particles.py  spectra.py
heliopy/spice/: __init__.py  data.py  spice.py
heliopy/stats/: distributions.py  fitting.py  stats.py
heliopy/test/: fitting_test.py  plasma_test.py  spectra_test.py  stats_test.py  test_spice.py  time_test.py
pycdf/: README.md  datamodel.py  time.py
pyspace/: __init__.py  fitting.py  plasma.py  stats.py  time.py
requirements/: base.txt  docs.txt  extras.txt  test.txt
(+172 files in other folders)
