[metadata]
name = HelioPy
provides = heliopy
description = "Python for heliophysics"
author = HelioPy contributors
author_email = dstansby@protonmail.com
license = GPL v3
license_file = LICENSE
keywords=physics, space-physics, heliophysics
classifiers=
  Development Status :: 4 - Beta
  Intended Audience :: Science/Research
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering :: Physics

[options]
python_requires = >=3.6
packages = find:
include_package_data = True
install_requires =
  numpy
  astropy>=3.1

[options.extras_require]
data =
  bs4
  pandas
  sunpy
  requests
  cdflib!=0.3.5, !=0.3.14, !=0.3.15, !=0.3.16
  wget
spice =
  spiceypy!=3.0.0
test =
  pytest<5.4
  pytest-cov
  pytest-timeout
  pytest-pep8
  pytest-xdist
  tables
docs =
  graphviz
  matplotlib
  mock
  sphinx>=2
  sphinx-automodapi
  sphinx-bootstrap-theme>=0.7
  sphinx-gallery
  sphinx-issues
  towncrier
  pillow


[bdist_wheel]
python-tag = py3

[versioneer]
VCS = git
style = pep440
versionfile_source = heliopy/_version.py
versionfile_build = heliopy/_version.py
tag_prefix =

[tool:pytest]
timeout = 240
filterwarnings =
    error
    ignore:Discarding nonzero nanoseconds
    ignore:numpy.ufunc size changed:RuntimeWarning
    ignore:can't resolve package from __spec__ or __package__, falling back on __name__ and __path__:ImportWarning
markers =
    data: tests that need data (deselect with '-m "not data"')
    pep8
    remote_data
    timeout: set test timeout (if unspecified, default is 240 seconds)
addopts = -m "not data"
log_level = INFO
pep8ignore =
    doc/source/auto_examples/* ALL
    heliopy/data/ulysses.py E501
    heliopy/data/spice.py E501
    heliopy/data/cassini.py E501
    heliopy/spice.py E501
    examples/*.py E402
