[metadata]
name = HelioPy
provides = heliopy
description = "Python for heliophysics"
author = HelioPy contributors
author_email = dstansby@protonmail.com
license = GPL v3
license_file = LICENSE
keywords=physics, space-physics, heliophysics
classifiers=
  Development Status :: 4 - Beta
  Intended Audience :: Science/Research
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering :: Physics

[options]
python_requires = >=3.6
packages = find:
include_package_data = True

[options.extras_require]
docs =
  sphinx>=2
  sphinx-bootstrap-theme>=0.7

[versioneer]
VCS = git
style = pep440
versionfile_source = heliopy/_version.py
versionfile_build = heliopy/_version.py
tag_prefix =
